# oslib

./: CMakeLists.txt  README.md
include/oslib/: dl.hpp  pipes.hpp  platform.hpp
include/oslib/detail/: posix_pipes.hpp
include/oslib/fwd/: pipes.hpp
include/oslib/native/: posix_fdstream.hpp
src/: dl.cpp
test/: test0.cpp
